responsive in home page, upload cv  and remove cypress, vite

--- a/.gitignore
+++ b/.gitignore
@@ -38,13 +38,6 @@ yarn-error.log*
 .nuxt-storybook/
 .data/
 .swc/
-.vite-inspect/
 
-# cypress
-/cypress/videos/
-/cypress/screenshots/
-/cypress/results/
-
-# vitest
-/vitest-environment-mock.js
-/test/unit/coverage/
+# cursor
+.cursor/
