--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.10.1",
+    "@tailwindcss/forms": "^0.5.10",
     "nuxt": "^3.12.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
